--- a/_questions/visualizations/visualization05.html
+++ b/_questions/visualizations/visualization05.html
@@ -1,3 +1,2 @@
-<h3>Association between mobility problem, performance dimension, <br>performance indicator category and performance indicator.</h3>
 <img src="{{ '/assets/images/question05/performance-indicators.png' | relative_url }}" style="margin-bottom: 2rem"/>
-<a href="{{ '/assets/images/question05/performance-indicators.png' | relative_url }}" style="max-width: 90%; margin-top: 1rem"><p>References available at Table 1. Literature Review</p></a>
+<p>Association between mobility problem, performance dimension, <br>performance indicator category and performance indicator. <br><a href="{{ '/assets/images/question05/performance-indicators.png' | relative_url }}" style="max-width: 90%; margin-top: 1rem">References available at Table 1. Literature Review</a></p>
