--- a/_questions/visualizations/visualization05.html
+++ b/_questions/visualizations/visualization05.html
@@ -1,2 +1,2 @@
 <img src="{{ '/assets/images/question05/performance-indicators.png' | relative_url }}" style="margin-bottom: 2rem"/>
-<p>Association between mobility problem, performance dimension, <br>performance indicator category and performance indicator. <br><a href="{{ '/assets/images/question05/performance-indicators.png' | relative_url }}" style="max-width: 90%; margin-top: 1rem">References available at Table 1. Literature Review</a></p>
+<p>Association between mobility problem, performance dimension, <br>performance indicator category and performance indicator. <br><a href="{{ '/assets/images/question05/appendix-2.pdf' | relative_url }}" style="max-width: 90%; margin-top: 1rem">References available at Table 2. Performance indicators</a></p>
